--- a/horario.html
+++ b/horario.html
@@ -9,7 +9,7 @@
   <header>
     <img src="Logo.png" alt="Logo del club"width="200">
     <h1>Seguimiento Clausura 22/23 CDH </h1>
-    <h2>Tablas de clasificación</h2>
+    <h2>Horario</h2>
   </header>
 
   <main class="container">
