Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
 
   <main class="container">
+<h3> Buenas!! Mañana a las 16:00 se habilitarán todas las opciones en la web para consultar las clasificaciones y los horarios.</h3>
 <!--    
     <div class="button-container">
       <h3><a href="index.html" class="button">Inicio</a></h3>
